allow storyform post creation for those with publishing capabilities, fix extra spacing at bottom of editor
git-svn-id: https://plugins.svn.wordpress.org/storyform/trunk@1226671 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/editor/editor.css
+++ b/editor/editor.css
@@ -1,5 +1,10 @@
+html, body {
+	height:100%;
+}
+
 #wpwrap {
 	height: 100%;
+	overflow-y: hidden;
 }
 
 #wpcontent {
@@ -22,4 +27,8 @@
     top: 0;
     left: 0;
     background-color: #FFF;
+}
+
+#wpfooter {
+	display: none;
 }
